--- a/public/login.html
+++ b/public/login.html
@@ -26,15 +26,19 @@
     </div>
 
 
-    <script src="https://www.google.com/recaptcha/api.js?render=6LcaKtIZAAAAAK6RCXm1AoJfpgWNWo7wUzwzUZA-"></script>
+    <!-- Update site key in url and script below -->
+    <script src="https://www.google.com/recaptcha/api.js?render=6Ldf9NMZAAAAAPCC1w5FxgiMW9gobpVTO0toeFoa"></script>
     <script>
+
+        const reCAPTCHA_site_key = '6Ldf9NMZAAAAAPCC1w5FxgiMW9gobpVTO0toeFoa'
+
         document.getElementById('login-form').addEventListener('submit', function (e) {
             e.preventDefault();
             runCaptcha();
         });
 
         function runCaptcha() {
-            grecaptcha.execute('6LcaKtIZAAAAAK6RCXm1AoJfpgWNWo7wUzwzUZA-', { action: 'login' })
+            grecaptcha.execute(reCAPTCHA_site_key, { action: 'login' })
                 .then(function (captcha) {
                     handleClick(captcha);
                 });
