Add function for create, find and delete refresh_tokens on database

--- a/public/login.html
+++ b/public/login.html
@@ -59,9 +59,15 @@
                 method: 'post',
                 body: JSON.stringify(data)
             })
-                .then(response => response.text())
-                .then(text => showResult(text))
-                .catch(error => showResult(error));
+                .then(response => response.json())
+                .then(response => {
+                    const token = response.access_token;
+                    if (!token) {
+                        return showResult(response.message);
+                    }
+                    window.alert('Successfully logged in!');
+                    console.log(response);
+                });
         }
 
         function showResult(text) {
